--- a/exercicios/ex026/mq002/styles/landscape.css
+++ b/exercicios/ex026/mq002/styles/landscape.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Configurações para telas deitadas */
+
+body {
+    background-image: url('../images/cev-landscape.jpg');
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: contain;
+}
