--- a/exercicios/ex026/mq002/styles/portrait.css
+++ b/exercicios/ex026/mq002/styles/portrait.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Configurações para telas em pé */
+
+body {
+    background-image: url('../images/cev-portrait.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+}
