--- a/exercicios/ex026/mq002/styles/style.css
+++ b/exercicios/ex026/mq002/styles/style.css
@@ -1,3 +1,21 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #233eff;
+}
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 3px #152392;
+}
+
