--- a/exercicios/ex026/mq002/styles/style.css
+++ b/exercicios/ex026/mq002/styles/style.css
@@ -12,10 +12,13 @@ html, body {
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 h1 {
     color: white;
     text-shadow: 2px 2px 3px #152392;
+    padding: 10px;
 }
 
