--- a/exercicios/ex026/mq005/styles/style.css
+++ b/exercicios/ex026/mq005/styles/style.css
@@ -16,6 +16,24 @@ header h1 {
     padding: 10px;
 }
 
+span#burguer {
+    display: block;
+    background-color: rgb(66, 66, 66);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu#itens {
+    display: none;
+}
+
 menu li {
     list-style-type: none;
 }
