--- a/exercicios/ex026/mq005/styles/style.css
+++ b/exercicios/ex026/mq005/styles/style.css
@@ -10,6 +10,10 @@ html, body {
     background-color: rgb(197, 197, 197);
 }
 
+header {
+    background-color: rgb(143, 143, 143);
+}
+
 header h1 {
     background-color: rgb(160, 160, 160);
     text-align: center;
